<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
-->
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activity.DetailActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.Base.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <RelativeLayout
                android:id="@+id/rl_content_cover"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax">

                <ImageView
                    android:id="@+id/iv_movie_detail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/app_name"
                    android:scaleType="centerCrop"
                    android:src="@color/colorPrimary" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:background="@drawable/bg_gradient_black"
                    android:padding="10dp"
                    android:paddingBottom="10dp">

                    <TextView
                        android:id="@+id/tv_title_movie_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Lorem Ipsum"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textSize="20sp" />

                </RelativeLayout>
            </RelativeLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="fill_vertical"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="400dp">

            <RelativeLayout
                android:id="@+id/content_detail_movie"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="20dp"
                    android:visibility="visible">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:text="@string/text_overview"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/tv_overview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            tools:text="Lorem ipsum "
                            android:textColor="@color/colorTextSecondary" />

                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_marginTop="20dp"
                            android:layout_marginLeft="50dp"
                            android:layout_marginRight="50dp"
                            android:text="Tambah ke favorite"
                            android:textColor="@color/white"
                            android:onClick="bookmarkMovie"
                            android:textStyle="bold"
                            android:background="@drawable/bg_button_yellow"/>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="15dp"
                            android:background="@color/lineColor" />

                        <TextView
                            android:id="@+id/tv_trailer"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/trailer"
                            android:layout_marginTop="15dp"
                            android:textSize="18sp" />

                        <LinearLayout
                            android:id="@+id/rl_list_trailer"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:gravity="center_horizontal"
                            android:orientation="horizontal">

                            <ProgressBar
                                android:id="@+id/pb_loading"
                                style="?android:attr/progressBarStyleLarge"
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:layout_gravity="center_vertical" />

                            <TextView
                                android:id="@+id/tv_loading"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:paddingLeft="4dp"
                                android:paddingTop="4dp"
                                android:text="@string/loading" />

                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="15dp"
                            android:background="@color/lineColor" />

                        <TextView
                            android:id="@+id/tv_review"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/review"
                            android:layout_marginTop="15dp"
                            android:textSize="18sp" />

                        <LinearLayout
                            android:id="@+id/rl_list_review"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="80dp"
                            android:gravity="center_horizontal"
                            android:orientation="horizontal">

                            <ProgressBar
                                android:id="@+id/pb_loading_review"
                                style="?android:attr/progressBarStyleLarge"
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:layout_gravity="center_vertical" />

                            <TextView
                                android:id="@+id/tv_loading_review"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:paddingLeft="4dp"
                                android:paddingTop="4dp"
                                android:text="@string/loading" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>
            </RelativeLayout>

            <ProgressBar
                android:id="@+id/pb_movie_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone" />

        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
